--- a/package.json
+++ b/package.json
@@ -1,38 +1,50 @@
 {
   "name": "boomi-modal",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "A simply awesome modal popup",
   "main": "gulpfile.js",
   "scripts": {
     "test": "echo \"A simply awesome modal popup\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/erikdmitchell/boomi-modal.git"
+  },
   "keywords": [],
   "author": "Erik Mitchell",
   "license": "GPL-3.0",
+  "bugs": {
+    "url": "https://github.com/erikdmitchell/boomi-modal/issues"
+  },
+  "homepage": "https://github.com/erikdmitchell/boomi-modal#readme",
   "devDependencies": {
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^5.0.0",
     "gulp-cache": "^1.0.2",
     "gulp-concat": "^2.6.1",
-    "gulp-filter": "",
-    "gulp-ignore": "",
+    "gulp-filter": "^5.1.0",
+    "gulp-ignore": "^2.0.2",
     "gulp-imagemin": "",
     "gulp-jshint": "^2.0.4",
     "gulp-load-plugins": "",
     "gulp-newer": "",
     "gulp-notify": "",
+    "gulp-phpcbf": "^0.1.2",
     "gulp-phpcs": "^2.1.0",
     "gulp-plumber": "^1.1.0",
-    "gulp-phpcbf": "^0.1.2",
     "gulp-rename": "^1.2.2",
     "gulp-run-sequence": "",
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "",
     "gulp-stylelint": "^5.0.0",
-    "gulp-uglify": "^3.0.0",
+    "gulp-uglify": "^3.0.2",
     "gulp-uglifycss": "",
     "gulp-util": "",
+    "gulp-zip": "^3.2.0",
     "jshint": "",
     "jshint-stylish": ""
+  },
+  "dependencies": {
+    "gulp-sourcemaps": "^2.6.5"
   }
 }
