gulp 3.9.1, updated other depend

--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
   },
   "homepage": "https://github.com/erikdmitchell/boomi-modal#readme",
   "devDependencies": {
-    "gulp": "^4.0.2",
+    "gulp": "^3.9.1",
     "gulp-autoprefixer": "^5.0.0",
-    "gulp-cache": "^1.1.2",
+    "gulp-cache": "^1.0.2",
     "gulp-concat": "^2.6.1",
     "gulp-cssbeautify": "^1.0.1",
     "gulp-filter": "^5.1.0",
@@ -32,10 +32,9 @@
     "gulp-newer": "",
     "gulp-notify": "",
     "gulp-phpcbf": "^0.1.2",
-    "gulp-phpcs": "^2.2.0",
-    "gulp-plumber": "^1.2.1",
-    "gulp-rename": "^1.4.0",
-    "gulp-run-sequence": "",
+    "gulp-phpcs": "^2.1.0",
+    "gulp-plumber": "^1.1.0",
+    "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "",
     "gulp-stylelint": "^9.0.0",
@@ -44,7 +43,9 @@
     "gulp-util": "",
     "gulp-zip": "^3.2.0",
     "jshint": "",
-    "jshint-stylish": ""
+    "jshint-stylish": "",
+    "run-sequence": "",
+    "stylelint": "^10.1.0"
   },
   "dependencies": {
     "gulp-imagemin": "^6.0.0",
